website/versioned_docs/version-2.7.x/reference/subsystems/yapf.mdx
---
title: yapf
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

A formatter for Python files (https://github.com/google/yapf).

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[yapf]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]yapf-skip`}
  env_repr="PANTS_YAPF_SKIP"
  default_repr={`False`}
>
  Don&#x27;t use yapf when running
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 fmt` and
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 lint`.
</Option>

### `args`

<Option
  cli_repr={`--yapf-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_YAPF_ARGS'
  default_repr={`[]`}
>
Arguments to pass directly to yapf, e.g. `--yapf-args="--no-local-style"`.

Certain arguments, specifically `--recursive`, `--in-place`, and `--parallel`, will be ignored because Pants takes care of finding all the relevant files and running the formatting in parallel.

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--yapf-version=<str>`}
  env_repr="PANTS_YAPF_VERSION"
  default_repr={`yapf==0.31.0`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--yapf-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_YAPF_EXTRA_REQUIREMENTS"
  default_repr={`["toml"]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--yapf-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_YAPF_INTERPRETER_CONSTRAINTS"
  default_repr={`["CPython>=3.6"]`}
>
  Python interpreter constraints for this tool.
</Option>

### `lockfile`

<Option
  cli_repr={`--yapf-lockfile=<str>`}
  env_repr='PANTS_YAPF_LOCKFILE'
  default_repr={`<default>`}
>
Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python-setup].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.7.2/src/python/pants/backend/python/lint/yapf/lockfile.txt for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds.

To use a custom lockfile, set this option to a file path relative to the build root, then run `./pants generate-lockfiles --resolve=yapf`.

Lockfile generation currently does not wire up the `[python-repos]` options. If lockfile generation fails, you can manually generate a lockfile, such as by using pip-compile or `pip freeze`. Set this option to the path to your manually generated lockfile. When manually maintaining lockfiles, set `[python-setup].invalid_lockfile_behavior = 'ignore'`.

</Option>

### `console_script`

<Option
  cli_repr={`--yapf-console-script=<str>`}
  env_repr="PANTS_YAPF_CONSOLE_SCRIPT"
  default_repr={`yapf`}
>
  The console script for the tool. Using this option is generally preferable to
  (and mutually exclusive with) specifying an --entry-point since console script
  names have a higher expectation of staying stable across releases of the tool.
  Usually, you will not want to change this from the default.
</Option>

### `entry_point`

<Option
  cli_repr={`--yapf-entry-point=<str>`}
  env_repr="PANTS_YAPF_ENTRY_POINT"
  default_repr={`None`}
>
  The entry point for the tool. Generally you only want to use this option if
  the tool does not offer a --console-script (which this option is mutually
  exclusive with). Usually, you will not want to change this from the default.
</Option>

### `config`

<Option
  cli_repr={`--yapf-config=<file_option>`}
  env_repr='PANTS_YAPF_CONFIG'
  default_repr={`None`}
>
Path to style file understood by yapf (https://github.com/google/yapf#formatting-style/).

Setting this option will disable `[yapf].config_discovery`. Use this option if the config is located in a non-standard location.

</Option>

### `config_discovery`

<Option
  cli_repr={`--[no-]yapf-config-discovery`}
  env_repr='PANTS_YAPF_CONFIG_DISCOVERY'
  default_repr={`True`}
>
If true, Pants will include any relevant config files during runs (`.style.yapf`, `pyproject.toml`, and `setup.cfg`).

Use `[yapf].config` instead if your config is in a non-standard location.

</Option>

## Deprecated options

None

</span>

